# SHiFTCodeAutoSubmitter

./: .env.example  .python-version  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/services/: code_store.py  scraper.py  submitter.py
data/: discovered_codes.json  submitted_codes.json  unsubmitted_codes.json
tests/: test_code_store.py  test_scraper.py
